# fetch-backend

./: .gitignore  LICENSE  README.md  fetch_backend.py  pyproject.toml  requirements.txt  schema.sql  summary.txt
.github/workflows/: lint.yml  test.yml
requirements/: requirements-test.txt
tests/: test_app.py
